--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
   "env": {},
   "ignore": [],
-  "plugins": [],
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+  ],
   "presets": [
     ["@babel/preset-env"]
   ]
