--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "npm run clean && babel src --out-dir dist",
     "clean": "rimraf dist",
-    "test": "jest"
+    "start": "npm run start:dist",
+    "start:dev": "babel-node -- index.js",
+    "start:dist": "node index.js",
+    "testcase": "npm start:dev -- 1"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +17,13 @@
   "devDependencies": {
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
+    "@babel/node": "^7.6.1",
+    "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
-    "babel-jest": "^24.9.0",
-    "jest": "^24.9.0",
+    "@babel/runtime": "^7.6.0",
     "rimraf": "^3.0.0"
   },
   "dependencies": {
+    "node-fetch": "^2.6.0"
   }
 }
