--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run clean && babel src --out-dir dist",
     "clean": "rimraf dist",
     "start": "npm run start:dist",
-    "start:dev": "babel-node -- index.js",
+    "start:dev": "babel-node -- index.dev.js",
     "start:dist": "node index.js",
     "testcase": "npm start:dev -- 1"
   },
